theme spacing bug fix

--- a/src/components/layout/sections/testimonials/components/Testimonials/Testimonial.module.css
+++ b/src/components/layout/sections/testimonials/components/Testimonials/Testimonial.module.css
@@ -56,5 +56,5 @@
     justify-content: center;
     gap: 0.3em;
     position: absolute;
-    bottom: 3%;
+    bottom: 6%;
 }
